[package]
name = "marvelrust"
version = "0.1.0"
authors = ["lmolas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = {version = "0.11.0", features = ["blocking"] }
md5 = "0.7.0"
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"
